fix white space below navbar

--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,15 @@ body,
 .App {
   height: 100%;
   width: 100%;
-  
+
 }
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
 
 .backgroundImage {
 
@@ -23,13 +30,12 @@ body,
   background: linear-gradient(180deg, #FFF 0%, #FFF 0.01%, #72B7B2 100%);
   height: 100%;
   width: 100%;
-  background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   background-position: center;
-
+  background-attachment: fixed;
 }
 
 .inversion-title {
