--- a/src/pages/Forms/Form.css
+++ b/src/pages/Forms/Form.css
@@ -10,11 +10,10 @@
     padding-right: 2%;
     padding-top: 1%;
     margin-top: 1%;
-
+    background-attachment: fixed;
 }
 
 .big-container {
-    height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
